# mlops_flask_mlflow_grafana_streamlit_aws

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Tracking_Orchestration/: pyproject.toml  test.py  train.py
streamlit/: Dockerfile  frontend.py  pyproject.toml
web_service_monitoring/: docker-compose.yml  pyproject.toml  stream_send.py
web_service_monitoring/evidently_service/: app.py
web_service_monitoring/prediction_service/: app.py
