[tool.poetry]
name = "tracking-orchestration"
version = "0.1.0"
description = ""
authors = ["ivan golt <102701882+ivangolt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tracking_orchestration"}]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "*"
pandas = "*"
sklearn = "*"
xgboost = "*"
hyperopt = "*"
xarray = "*"
python-dotenv = "*"
prefect = "==2.0b5"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
